fixtures/errors/async_hooks_hook_throw_fatal.js
const { createHook } = require('node:async_hooks');

process.on('uncaughtException', () => {
  console.log('caught');
});

createHook({
  init() {
    throw new Error('hook boom');
  },
}).enable();

setTimeout(() => {}, 0);
